get-a-quote to get-the-quote, contact.html, index card gap solve,

--- a/Optra Seven/css/shihab.css
+++ b/Optra Seven/css/shihab.css
@@ -760,8 +760,8 @@
 
 .o7-map__card-bangladesh {
     position: absolute;
-    bottom: 44%;
-    right: 22%;
+    bottom: 53%;
+    right: 25.5%;
 }
 
 /* america */
